fix: fixed column alignment in table

--- a/webapp/src/app/shared/table/table.component.css
+++ b/webapp/src/app/shared/table/table.component.css
@@ -377,4 +377,5 @@
 
   .mat-sort-header-container {
       font-family: 'mark-pro';
+      overflow: hidden;
   }
